objects/LLC_BI__RelatedListsCopyConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Related Lists to be copied with an Object copy</description>
    <fields>
        <fullName>LLC_BI__Label__c</fullName>
        <description>This field is manually entered and required when utilizing the related list copy configuration option. This field is the Label used when displaying the list.</description>
        <inlineHelpText>Label used when displaying the list</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Related_List_Name__c</fullName>
        <description>This field is manually entered and required when utilizing the related list copy configuration option. This field specifies the name of a related list of data to copy.</description>
        <inlineHelpText>Name of a related list of data to copy</inlineHelpText>
        <label>Related List Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SObject_Type__c</fullName>
        <description>This field is manually entered and required when utilizing the related list copy configuration option. This field specifies the sObject Type to which the lists apply.</description>
        <inlineHelpText>SObject Type to which the lists apply</inlineHelpText>
        <label>SObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually entered and required when utilizing the related list copy configuration option. This field is used as an Indicator the field should be selected by default.</description>
        <inlineHelpText>Indicator if the field should be selected by default.</inlineHelpText>
        <label>Selected Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>This field is manually entered and required when utilizing the related list copy configuration option. This field specifies the ranking used to order entries in the list.</description>
        <inlineHelpText>Ranking used to order entries in the list</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Lists Copy Configuration</label>
</CustomObject>